[add] x64 basic arithmetic operation

--- a/x64-asm/X64.md
+++ b/x64-asm/X64.md
@@ -1,5 +1,7 @@
 # x64 assembly
 
+アセンブリ自分用メモ
+
 ## Intel記法
 x64アセンブリにはIntel記法とAT&T記法の二種類が存在している. 
 AT&T記法ではオペランドの順番が非直感的(と感じる)なので主にIntel記法について説明する.
@@ -40,7 +42,21 @@ main:
 `./do sample.s` を実行すると, 最後の行に `11` が出力されればよい. 
 `print_one_integer` は第一引数(`rdi`)に整数をセットしてから呼ぶとそれを出力してくれる. libとリンクしてprintfを利用することで出力を行う. 
 
+### `mov` 
+とりあえずここで `mov` を説明する.
+これはデータを移動させる命令だが, 上のアセンブリの例のように`mov rsi, 5`
+で`rsi = 5`の意味だと思っておけばとりあえず良い. 
+
+### レジスタ
+x64にはレジスタが何種類かあるが, すべて一気に覚えるのは不可能なのでここではとりあえず, 8-byteのサイズのレジスタをいくつか知っておく. たとえば `rdi, rsi, rdi, rbx` などである. より小さな幅のレジスタは後で覚える. 
+
 ## 算術演算
+
+### 基本的な算術演算
+`add, sub, imul, sal, sar, xor, or, and` 等である. これらは基本的に二つオペランドをとり, `add rdi, rsi` のような形で動作する. intel記法の場合はこれは`rdi = rdi + rsi`を意味する. ほとんどの命令はレジスタをオペランドにとれるが, `sal, sar` (これらはそれぞれ左、右シフト演算である)はシフトの大きさを定数でしか取れない. [arithmetic.s](src/arithmetic.s) をいじるといろいろできる. 
+
+### 特殊な算術演算
+
 
 ## データ移動
 
