--- a/x64-asm/X64.md
+++ b/x64-asm/X64.md
@@ -55,8 +55,17 @@ x64にはレジスタが何種類かあるが, すべて一気に覚えるのは
 ### 基本的な算術演算
 `add, sub, imul, sal, sar, xor, or, and` 等である. これらは基本的に二つオペランドをとり, `add rdi, rsi` のような形で動作する. intel記法の場合はこれは`rdi = rdi + rsi`を意味する. ほとんどの命令はレジスタをオペランドにとれるが, `sal, sar` (これらはそれぞれ左、右シフト演算である)はシフトの大きさを定数でしか取れない. [arithmetic.s](src/arithmetic.s) をいじるといろいろできる. 
 
-### 特殊な算術演算
+### `lea`
+ここで`lea`命令について説明する. 
+lea命令は通常の算術演算だけでなく、アドレスの計算にも利用できる. まず通常の算術演算の場合
 
+```
+lea rdi, [r8 + 2*r9 + 3]
+```
+
+のように$<> + a*<> + b$のような線形な計算をすることができ, その結果をrdiに置く. この場合`r8 = 5, r9 = 4`ならば`rdi = 5  + 2*4 + 3 = 16`となる.
+
+この計算がアドレスの計算のためにも利用できる. たとえば上の`print_one_integer`の中ではフォーマット文字列のアドレスを取得するのに利用している. 
 
 ## データ移動
 
@@ -66,3 +75,6 @@ x64にはレジスタが何種類かあるが, すべて一気に覚えるのは
 - [x64_cheetsheet](https://cs.brown.edu/courses/cs033/docs/guides/x64_cheatsheet.pdf)
     - x64全体をつかむため見た. 
 - [低レイヤを知りたい人のためのCコンパイラ作成入門](https://www.sigbus.info/compilerbook)
+- [最低限のアセンブラ(x86-64)を、手で書き、動かしながら理解する](https://3iz.jp/try-assembly.html)
+    - 説明が丁寧
+- [x86アセンブリのLEA命令って結局何をするの？](https://fromnand.hatenadiary.jp/entry/2020/02/28/003654)
